# ab-test-online-ads

./: .flake8  .pylintrc  README.md  mypy.ini  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: ci-pystest.yml  lint.yml
data/: ads_experiment.csv
scripts/: analyze_experiment.py  run_experiment.py
scripts/data/: ads_experiment.csv
src/: __init__.py  analysis.py
src/ab_test_ads.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/ab_test_online_ads/: analysis.py  data_generation.py
src/ab_test_online_ads.egg-info/: PKG-INFO  SOURCES.txt
tests/: test_analysis.py  test_data_generation.py  test_something.py
