[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "ab-test-ads"
version = "0.1.0"
description = "A/B testing toolkit for online ads"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas",
    "numpy",
    "scipy",
    "statsmodels",
]

[tool.setuptools.packages.find]
where = ["src"]
