[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "ab-test-online-ads"
version = "0.1.0"
description = "A/B testing toolkit for online ads"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas",
    "numpy",
    "scipy",
    "statsmodels",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ["py313"]

include = '\.pyi?$'

exclude = '''
(
    \.pylintrc
    /(\.eggs)|
    /(\.egg-info)|
    /(\.pytest_cache)|
    /(\.mypy_cache)|
    /(\.vscode)|
    /(\.git)|
    /__pycache__|
    /build|
    /dist|
    /venv|
    /PKG-INFO|
    /\.venv
)
'''